--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ align-items: center;
   width: 46%;
   height: 75%;
   outline-style: solid;
-
+  
 }
 
 .list-container ul{ 
@@ -71,3 +71,47 @@ align-items: center;
 
 }
 
+.input-container{
+  justify-self: center;
+  top: 35%;
+  position: fixed;
+  height: 30%;
+  width: 30%;
+  background-color: aquamarine;
+  z-index: 1000;
+  outline-style: solid;
+  outline-color: rgb(105, 204, 211);
+
+  & .input-area{
+    position: relative;
+    width: 80%;
+    height: 10%;
+    align-self: center;
+    left: 8%;
+  }
+  & .close-button{
+    position: relative;
+    top: 2%;
+    right: .5%;
+    
+    max-width: fit-content;
+    max-height: fit-content;
+    &:hover{
+      background-color: gray;
+      box-shadow: 1px 5px 5px rgb(0, 0, 0);
+    }
+  }
+
+}
+
+.input-background{
+  position: fixed;           /* Fiksēta pozīcija */
+  top: 0;                    /* Sākas no augšas */
+  left: 0;                   /* Sākas no kreisās */
+  width: 100%;
+  height: 100%;
+  
+  background-color: gray;
+  opacity: 0.5;
+  z-index: 999;
+  }
